@@ -156,7 +156,7 @@ fileio      = false
 #                                                      on higher resolution monitors which is probably not what you want.
 #                                                      Possible values: true, false, 1, 0, auto.
 #                                      quit warning: Set this option to indicate whether DOSBox-X should show a warning message when the user tries to close its window.
-#                                                    If set to auto (default), DOSBox-X will warn only if at least one file handle is still open.
+#                                                    If set to auto (default), DOSBox-X will warn if there are open file handles or a guest system is currently running.
 #                                     keyboard hook: Use keyboard hook (currently only on Windows) to catch special keys and synchronize the keyboard LEDs with the host
 #                                            weitek: If set, emulate the Weitek coprocessor. This option only has effect if cputype=386 or cputype=486.
 #                               bochs debug port e9: If set, emulate Bochs debug port E9h. ASCII text written to this I/O port is assumed to be debug output, and logged.
