@@ -1,4 +1,4 @@
 /*auto-generated*/
-#define UPDATED_STR "Aug 16, 2020 10:45:06pm"
-#define GIT_COMMIT_HASH "b1cd4c2"
+#define UPDATED_STR "Aug 17, 2020 1:21:18pm"
+#define GIT_COMMIT_HASH "337c0dc"
 #define COPYRIGHT_END_YEAR "2020"
